syntax = "proto3";

package vehicles;

option go_package = "github.com/szbobrowski/master-thesis/emergency-services;main";

service LifeguardVehicleService {
  rpc CreateVehicle(CreateVehicleRequest) returns (CreateVehicleResponse);
  rpc GetVehicle(GetVehicleRequest) returns (GetVehicleResponse);
  rpc UpdateVehicle(UpdateVehicleRequest) returns (UpdateVehicleResponse);
  rpc DeleteVehicle(DeleteVehicleRequest) returns (DeleteVehicleResponse);
}

message CreateVehicleRequest {
  string type = 1;
  string location = 2;
  int32 fuel_level_in_liters = 3;
  bool on_mission = 4;
  int32 lifeguard_in_charge_id = 5;
}

message CreateVehicleResponse {
  int32 id = 1;
}

message GetVehicleRequest {
  int32 id = 1;
}

message GetVehicleResponse {
  Vehicle vehicle = 1;
}

message UpdateVehicleRequest {
  int32 id = 1;
  string type = 2;
  string location = 3;
  int32 fuel_level_in_liters = 4;
  bool on_mission = 5;
  int32 lifeguard_in_charge_id = 6;
}

message UpdateVehicleResponse {
  bool success = 1;
}

message DeleteVehicleRequest {
  int32 id = 1;
}

message DeleteVehicleResponse {
  bool success = 1;
}

message Vehicle {
  int32 id = 1;
  string type = 2;
  string location = 3;
  int32 fuel_level_in_liters = 4;
  bool on_mission = 5;
  int32 lifeguard_in_charge_id = 6;
  string created_at = 7;
}
